fix overflow nos inputs de altura e idade

--- a/src/components/Basal/Basal.scss
+++ b/src/components/Basal/Basal.scss
@@ -250,7 +250,6 @@
 }
 
 .input__peso {
-  height: 100%;
   width: 60%;
   display: flex;
   align-items: center;
@@ -262,7 +261,6 @@
 }
 
 .input__altura {
-  height: 100%;
   width: 60%;
   position: absolute;
   right: 0;
@@ -270,7 +268,6 @@
 }
 
 .input__idade {
-  height: 100%;
   width: 60%;
   position: absolute;
   right: 0;
